ddetect (0.58) UNRELEASED; urgency=low

  * Joey Hess
    - Remove the bogus "false" from the end of the modprobe error message
      display.
    - Sort the list of modules for manual selection.
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Konstantinos Margaritis
    - Initial Greek translation (el.po)
  * Christian Perrier/Chris Tillman
    - Refined and standardized templates. Closes: #219469
  * Safir Šećerović
    - Update Bosnian translation.
  * Christian Perrier
    - Update French translation.
  * Miroslav Kure
    - Update Czech translation.
  * Jordi Mallach
    - Update Catalan translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Ilgiz Kalmetev
    - Update Russian translation. Closes: #221648.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
 
 -- Joey Hess <joeyh@debian.org>  Tue, 11 Nov 2003 12:13:52 -0500

ddetect (0.57) unstable; urgency=low

  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Joey Hess
    - typo fix
    - remove commented out sr_mod load line, code below loads it
    - try to load usb-storage if the system has usb. Needed for usb storage
      booted installs
  * Steinar H. Gunderson
    - Remove db_stop from hw-detect.sh, which confuses main-menu later on
      and doesn't really make a difference anyhow with cdebconf.
      (Closes: #219897)

 -- Joey Hess <joeyh@debian.org>  Mon, 10 Nov 2003 11:51:27 -0500

ddetect (0.56) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Updated Dutch translation (nl.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sat,  8 Nov 2003 20:26:16 +0100

ddetect (0.55) unstable; urgency=low

  * Christian Perrier
    - Update French translation.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
    - Update Czech translation.
  * Tommi Vainikainen
    - Update Finnish translation.
  * Petter Reinholdtsen
    - Updated nb.po.
